--- a/public/client/css/mobilestyle.css
+++ b/public/client/css/mobilestyle.css
@@ -31,10 +31,12 @@ body {
   float:bottom;
   background-color: lightgrey;
   border-top:1px solid black;
+  overflow:auto;
 }
 #chat-log {
   height:75%;
   position:relative;
   background-color:white;
   text-align:auto;
+  overflow:auto;
 }
